force-app/main/default/objects/Opportunity/fields/Checkbox1__c.field-meta.xml
<CustomField>
    <fullName>Checkbox1__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox1</description>
    <inlineHelpText>Checkbox1</inlineHelpText>
    <label>Checkbox1</label>
    <type>Checkbox</type>
</CustomField>