force-app/main/default/objects/Opportunity/fields/Checkbox2__c.field-meta.xml
<CustomField>
    <fullName>Checkbox2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox2</description>
    <inlineHelpText>Checkbox2</inlineHelpText>
    <label>Checkbox2</label>
    <type>Checkbox</type>
</CustomField>