force-app/main/default/objects/Opportunity/fields/CR__c.field-meta.xml
<CustomField>
    <fullName>CR__c</fullName>
    <label>CR</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lower Price</fullName>
            </value>
            <value>
                <fullName>Superior Features</fullName>
            </value>
            <value>
                <fullName>Best Service</fullName>
            </value>
            <value>
                <fullName>Higher Price</fullName>
            </value>
            <value>
                <fullName>Inferior Features</fullName>
            </value>
            <value>
                <fullName>Worst Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>