force-app/main/default/objects/Opportunity/fields/Job_Openings__c.field-meta.xml
<CustomField>
    <fullName>Job_Openings__c</fullName>
    <label>Job_Openings</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CRM at Cognizant</fullName>
            </value>
            <value>
                <fullName>HRMS at Hexaware</fullName>
            </value>
            <value>
                <fullName>HCM at TCS</fullName>
            </value>
            <value>
                <fullName>FIN at Polaris</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>