force-app/main/default/objects/Opportunity/fields/LabelB2B__c.field-meta.xml
<CustomField>
    <fullName>LabelB2B__c</fullName>
    <defaultValue>$Label.B2B</defaultValue>
    <description>LabelB2B</description>
    <inlineHelpText>LabelB2B</inlineHelpText>
    <label>LabelB2B</label>
    <type>TextArea</type>
</CustomField>