force-app/main/default/objects/Opportunity/fields/LabelB2C__c.field-meta.xml
<CustomField>
    <fullName>LabelB2C__c</fullName>
    <defaultValue>$Label.B2C</defaultValue>
    <description>LabelB2C</description>
    <inlineHelpText>LabelB2C</inlineHelpText>
    <label>LabelB2C</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>