force-app/main/default/objects/Opportunity/fields/LabelDefault__c.field-meta.xml
<CustomField>
    <fullName>LabelDefault__c</fullName>
    <description>LabelDefault</description>
    <inlineHelpText>LabelDefault</inlineHelpText>
    <label>LabelDefault</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>