force-app/main/default/objects/Opportunity/fields/LabelMarketing__c.field-meta.xml
<CustomField>
    <fullName>LabelMarketing__c</fullName>
    <defaultValue>$Label.Marketing</defaultValue>
    <description>LabelMarketing</description>
    <inlineHelpText>LabelMarketing</inlineHelpText>
    <label>LabelMarketing</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>