force-app/main/default/objects/Opportunity/fields/LabelSales__c.field-meta.xml
<CustomField>
    <fullName>LabelSales__c</fullName>
    <defaultValue>$Label.Sales</defaultValue>
    <description>LabelSales</description>
    <inlineHelpText>LabelSales</inlineHelpText>
    <label>LabelSales</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>