force-app/main/default/objects/Opportunity/fields/LabelSupport__c.field-meta.xml
<CustomField>
    <fullName>LabelSupport__c</fullName>
    <defaultValue>$Label.Support</defaultValue>
    <description>LabelSupport</description>
    <inlineHelpText>LabelSupport</inlineHelpText>
    <label>LabelSupport</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>