force-app/main/default/objects/Opportunity/fields/Negotiated_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Negotiated_Discount_Amount__c</fullName>
    <formula>Account.Negotiated_Discount_Rate__c  * Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Negotiated Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>