force-app/main/default/objects/Opportunity/fields/Opportunity_Size__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Size__c</fullName>
    <label>Opportunity Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>&lt; 25M</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>&gt; 25M</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>