force-app/main/default/objects/Opportunity/fields/Skill_Free_Text__c.field-meta.xml
<CustomField>
    <fullName>Skill_Free_Text__c</fullName>
    <label>Skill Free Text</label>
    <length>51</length>
    <type>Text</type>
</CustomField>