force-app/main/default/objects/Opportunity/fields/Skills__c.field-meta.xml
<CustomField>
    <fullName>Skills__c</fullName>
    <description>Work Skills</description>
    <label>Skills</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Job_Openings__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C++</fullName>
            </value>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>Dayforce</fullName>
            </value>
            <value>
                <fullName>PeopleSoft</fullName>
                <default>true</default>
                <label>PeopleSoft</label>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Selenium</fullName>
            </value>
            <value>
                <fullName>Hadoop</fullName>
            </value>
            <value>
                <fullName>Workday</fullName>
            </value>
            <value>
                <fullName>Oracle Apps</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>