force-app/main/default/objects/Opportunity/fields/STAGE_NAME__c.field-meta.xml
<CustomField>
    <fullName>STAGE_NAME__c</fullName>
    <label>STAGE NAME</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>