force-app/main/default/objects/Opportunity/validationRules/Account_is_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_is_mandatory</fullName>
    <active>false</active>
    <description>Account is mandatory while creating a opportunity</description>
    <errorConditionFormula>ISBLANK(AccountId)</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>Account ID is mandatory while creating a opportunity, Please select.</errorMessage>
</ValidationRule>