force-app/main/default/objects/Opportunity/validationRules/Amount_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_Mandatory</fullName>
    <active>false</active>
    <description>Amount should be greater than 0</description>
    <errorConditionFormula>Amount  &gt; 0</errorConditionFormula>
    <errorMessage>Amount should be greater then 0</errorMessage>
</ValidationRule>