force-app/main/default/objects/Opportunity/validationRules/Force_Close_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Force_Close_Reason</fullName>
    <active>false</active>
    <errorConditionFormula>IsClosed  = TRUE &amp;&amp; 
ISBLANK( TEXT(Close_Reason__c) )</errorConditionFormula>
    <errorDisplayField>Close_Reason__c</errorDisplayField>
    <errorMessage>Please select a valid reason for close</errorMessage>
</ValidationRule>