force-app/main/default/objects/Opportunity/validationRules/Force_future_Close_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Force_future_Close_Date</fullName>
    <active>false</active>
    <errorConditionFormula>MONTH( CloseDate )  &lt;&gt; MONTH( DATEVALUE(CreatedDate) ) ||
 YEAR ( CloseDate )  &lt;&gt; YEAR ( DATEVALUE(CreatedDate) )</errorConditionFormula>
    <errorDisplayField>CloseDate</errorDisplayField>
    <errorMessage>Please provide a future Close Date.</errorMessage>
</ValidationRule>