force-app/main/default/objects/Opportunity/validationRules/Force_SamecreationandClose_Quarter_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Force_SamecreationandClose_Quarter_date</fullName>
    <active>false</active>
    <description>Force Same creation and Close Quarter date</description>
    <errorConditionFormula>MONTH( CloseDate )  &lt;&gt; MONTH( DATEVALUE(CreatedDate) ) ||
 YEAR ( CloseDate )  &lt;&gt; YEAR ( DATEVALUE(CreatedDate) )</errorConditionFormula>
    <errorMessage>Creation and Close should in the same Quarter .</errorMessage>
</ValidationRule>