force-app/main/default/objects/Opportunity/validationRules/Opp_Should_be_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Opp_Should_be_Closed</fullName>
    <active>false</active>
    <description>Opportunity should be with the closed Status</description>
    <errorConditionFormula>IsClosed  = FALSE</errorConditionFormula>
    <errorMessage>Opportunity should be with the closed Status</errorMessage>
</ValidationRule>