force-app/main/default/objects/Opportunity/listViews/OPP_B2B.listView-meta.xml
<ListView>
    <fullName>OPP_B2B</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>OPPORTUNITY.RECORDTYPE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.B2B_Sales</value>
    </filters>
    <label>OPP B2B</label>
    <sharedTo>
        <group>Opp_B2B</group>
    </sharedTo>
</ListView>